# DigitSynth

./: .gitignore  LICENSE  README.md  button_test  combined_test  example-flex-data.csv  install-deps.sh  mapper_test  mode_manager_test  test_scaler
.github/workflows/: c-cpp.yml  ci-cd.yaml  main.yml  release.yml  unit-tests.yml
DigitSynth-Schematic/: ADC_Flex.kicad_sch  Buttons.kicad_sch  DigitSynth-top-pos-2.csv  DigitSynth-top-pos-2.numbers  DigitSynth-top-pos.csv  DigitSynth.csv  DigitSynth.kicad_pcb  DigitSynth.kicad_prl  DigitSynth.kicad_pro  DigitSynth.kicad_sch  DigitSynth_JLC_BOM_fixed.csv  LEDs.kicad_sch  Power.kicad_sch  RPInterface.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
DigitSynth-Schematic/gerbers/: DigitSynth-B_Cu.gbr  DigitSynth-B_Mask.gbr  DigitSynth-B_Paste.gbr  DigitSynth-B_Silkscreen.gbr  DigitSynth-Edge_Cuts.gbr  DigitSynth-F_Cu.gbr  DigitSynth-F_Mask.gbr  DigitSynth-F_Paste.gbr  DigitSynth-F_Silkscreen.gbr  DigitSynth-job.gbrjob
DigitSynth-Schematic/symbols/: ADS1256IDBR.kicad_sym
GloveMechanicalDesign/: FingerJoints.bak  FingerJoints.bak.bak  FingerJoints.bak.dwg  FingerJoints.dwg  FingerJointsTest17_3.stl  config.scad  hinge.scad  main.scad  middleSection.scad  proximalSection.scad  proximalSection.stl
application/: .gitignore  CMakeLists.txt  Makefile  README.md  create-package.sh  log
application/docs/: Docs.cmake  Doxyfile.in
application/include/: ChordManager.hpp  FlexDSP.hpp  ILedDriver.hpp  ITLC59711.hpp  LedController.hpp  LfoManager.hpp  MessageBuilder.hpp  MidiScaler.hpp  MidiTypes.hpp  MockPattern.hpp  MockTLC59711.hpp  ModeManager.hpp  SynthController.hpp  TLC59711.h  adc-driver.h  adc-driver.hpp  button-driver.h  button-driver.hpp  callback-types.h  flex-dsp.hpp  flex-sensor.h  flex-sensor.hpp  gpio.h  i-led-driver.hpp  led-controller.hpp  lfo-manager.hpp  message-builder.hpp  midi-driver.hpp  midi-scaler.hpp  midi-types.hpp  mock-pattern.hpp  mock-tlc59711.hpp  mode-manager.hpp  paramMapper.hpp  patterns.h  patterns.hpp  pin-map.h  spi.h  synth-controller.hpp  tlc59711.hpp  (+3 more)
application/src/: ChordManager.cpp  FlexDSP.cpp  ITLC59711.cpp  ITLC59711.hpp  LedController.cpp  LfoManager.cpp  MessageBuilder.cpp  MidiScaler.cpp  ModeManager.cpp  SynthController.cpp  TLC59711.cpp  adc-driver.cpp  button-driver.cpp  chord-manager.cpp  flex-dsp.cpp  flex-sensor.cpp  gpio.cpp  led-controller.cpp  lfo-manager.cpp  main.cpp  message-builder.cpp  midi-driver.cpp  midi-scaler.cpp  midi_output_test.cpp  mode-manager.cpp  paramMapper.cpp  patterns.cpp  spi.cpp  synth-controller.cpp  test_leds_buttons.cpp  tlc59711.cpp  tlc59711_hello  voltage-scaler.cpp
application/test/: CMakeLists.txt  assert.h  test_TLC.cpp  test_adc-driver.cpp  test_button-driver.cpp  test_flex-sensor.cpp  test_foo.cpp  test_gpio.cpp  test_spi.cpp  test_voltage-scaler.cpp
application/test/synth_logic/: button_test.cpp  chord_manager_test.cpp  combined_test.cpp  integrated_test.cpp  led_controller_test.cpp  lfo_manager_test.cpp  mapper_test.cpp  message_builder_test.cpp  midi_flex_test.cpp  mode_manager_test.cpp  scaler_test.cpp
application/tools/: midi_test.cpp
design/: README.md  SystemFlowchart.drawio
docs/: Dependencies.md  Resistor-selection.md  synth-logic-rules.md
research/Flex-sensor/: flex-sensor.md
research/io/: ads1256.md
